stop menu items from wrapping

--- a/css/main-header.styl
+++ b/css/main-header.styl
@@ -59,6 +59,7 @@
       pointer-events: none
       position: absolute
       right: 23px
+      white-space: no-wrap
 
       &:before
         border: solid
